--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,13 +10,18 @@
     }
 }
 
-div {
+.top50 {
     height: 100vh;
     h2{
         margin-top:20px;
         text-align: center;
        
     }
+    .cardText{
+        height: 30px;
+    }
+    
+    
 }
 
 footer {
@@ -27,4 +32,6 @@ footer {
         text-align: center;
     }
 }
-
+h2{
+    color: green;
+}
